--- a/components/searchInput.module.css
+++ b/components/searchInput.module.css
@@ -1,18 +1,22 @@
-.searchInput { 
-    margin-right: calc(0.125rem * -1); 
-    outline: 0; 
+.searchInput {
+	margin-right: calc(0.125rem * -1);
+	outline: 0;
 }
 
-.searchInput:focus { 
-    box-shadow: inset 0 0 0 1px rgb(59,113,202)
+.searchInput:focus {
+	box-shadow: inset 0 0 0 1px rgb(59, 113, 202);
 }
 
-.searchBtn { 
-    background-color: rgb(37 99 235) !important; 
-    box-shadow: 0 0.25rem 0.375rem calc(1px * -1) rgba(0, 0, 0, 0.1), 0 0.125rem 0.25rem calc(1px * -1) rgba(0, 0, 0, 0.06); 
+.searchBtn {
+	background-color: rgb(37 99 235) !important;
+	box-shadow:
+		0 0.25rem 0.375rem calc(1px * -1) rgba(0, 0, 0, 0.1),
+		0 0.125rem 0.25rem calc(1px * -1) rgba(0, 0, 0, 0.06);
 }
 
 .searchBtn:hover {
-    @apply bg-blue-700;
-    box-shadow: 0 0.625rem 1rem calc(0.125rem * -1) rgba(0, 0, 0, 0.1), 0 0.25rem 0.375rem calc(0.125rem * -1) rgba(0, 0, 0, 0.05);
+	@apply bg-blue-700;
+	box-shadow:
+		0 0.625rem 1rem calc(0.125rem * -1) rgba(0, 0, 0, 0.1),
+		0 0.25rem 0.375rem calc(0.125rem * -1) rgba(0, 0, 0, 0.05);
 }
